Transfer: Fix card rendering on mobile

--- a/src/pages/Transfer/Transfer.scss
+++ b/src/pages/Transfer/Transfer.scss
@@ -4,7 +4,6 @@
   .swiper-container /deep/ {
     .swiper-wrapper {
       padding-bottom: 35px;
-      width: 365px;
     }
     .swiper-pagination-bullet {
       background: $aubergine;
